# NowUI

./: .gitignore  README.md  _scan_comments.py  _strip_comments.py  test-results.xml
.github/scripts/: Run-UnityTests.ps1
.github/workflows/: build-msdf-atlas-gen-libraries.yml  build-native-libraries.yml  build-nowui-vg-libraries.yml  build-verification.yml  unity-tests.yml  visual-smoke.yml
Assets/NowUI/: .npmignore  AGENTS.md  CHANGELOG.md  README.md  THIRD_PARTY_LICENSES.md  package.json
Assets/NowUI/AI~/: AGENTS.snippet.md
Assets/NowUI/Analyzers~/NowUI.Analyzers/: NowBuilderDiscardAnalyzer.cs  NowUI.Analyzers.csproj
Assets/NowUI/Assets/AnimatedEmoji/: README.txt
Assets/NowUI/Assets/Fonts/: Allura-Regular.ttf.asset  FontAwesomeIcons.ttf.asset  OpenSans-Regular.ttf.asset
Assets/NowUI/Assets/Shaders/: DocsFrostRectangleUGUI.shader  LottiePreview.shader  TxtRenderer.shader  TxtRendererRGBA.shader  TxtRendererRGBAUGUI.shader  TxtRendererUGUI.shader  UIBezier.shader  UIColorPicker.shader  UIColorPickerUGUI.shader  UIGlass.shader  UIGlassBlur.shader  UIGlassUGUI.shader  UIGradient.shader  UIGradientUGUI.shader  UIRectangle.shader  UIRectangleUGUI.shader  UIRipple.shader  UIRippleUGUI.shader
Assets/NowUI/Assets/Themes/: Dark.asset  Default.asset  DefaultDark.asset  HeroUI.asset  HeroUIControlRenderer.asset  HeroUIDark.asset  Material.asset  MaterialControlRenderer.asset  MaterialDark.asset  Night.asset  (+7 more)
Assets/NowUI/Documentation~/: AI_GUIDE.md  API.md  CodeEditor.md  Controls.md  CustomMaterials.md  EditorGUI.md  Effects.md  Features.md  Glass.md  Gradients.md  Layout.md  Lottie.md  Markdown.md  Markup.md  ModelPreviews.md  NodeGraph.md  Performance.md  README.md  RichText.md  StylesAndThemes.md  WorldSpace.md
Assets/NowUI/Editor/: NowEditorGUI.cs  NowFontCompiler.cs  NowFontEditor.cs  NowFontFamilyCompiler.cs  NowFontGlyphCatalog.cs  NowFontGlyphPickerControl.cs  NowFontGlyphPickerWindow.cs  NowLottieAssetEditor.cs  NowLottieDebugRender.cs  NowLottieImporter.cs  NowLottiePreviewRenderer.cs  NowThemeBaker.cs  NowThemeEditor.cs  NowUI.Editor.asmdef  NowUIAgentSkillInstaller.cs  NowUIEditorGUI.cs  NowUIFontCompiler.cs  NowUIFontCompilerNative.cs  NowUIThemeEditor.cs
Assets/NowUI/Example/: AssemblyInfo.cs  LayoutExample.cs  MailClientMockup.cs  ManagedFontCompare.cs  NowControlGalleryExample.cs  NowDockingExample.cs  NowDocsExample.cs  NowGraphicExample.cs  NowLandingPageExample.cs  NowLandingPageShared.cs  NowLayoutLandingPageExample.cs  NowMarkdownExample.cs  NowMathGraphExample.cs  NowModelPreviewDemoRig.cs  NowModelPreviewExample.cs  NowNodeGraphExample.cs  NowPipelineOverlayExample.cs  NowRenderTextureExample.cs  NowUI.Examples.asmdef  NowUIDocsExample.cs  NowUIGraphicExample.cs  NowUIMarkdownExample.cs  NowUIPipelineOverlayExample.cs  NowUIRenderTextureExample.cs  NowUIZooExample.cs  NowWorldGraphicExample.cs  NowZooExample.cs  ShapedRectangles.cs  Test.renderTexture  TextTests.cs
Assets/NowUI/Fonts/: Allura-Regular.ttf.asset  OpenSans-Regular.ttf.asset
Assets/NowUI/Native/nowui-msdf/: CMakeLists.txt  nowui_msdf.cpp  nowui_msdf.h
Assets/NowUI/Plugins/Native/nowui-msdf/: CMakeLists.txt  nowui_msdf.cpp  nowui_msdf.h  vcpkg.json
Assets/NowUI/Plugins/Native/nowui-vg/: CMakeLists.txt  nowui_vg.cpp  nowui_vg.h  test_main.cpp
Assets/NowUI/Runtime/: AssemblyInfo.cs  Now.cs  NowBootstrap.cs  NowControlRenderer.Controls.cs  NowControlRenderer.cs  NowDrawList.cs  NowEditorRebuildQueue.cs  NowEffects.cs  NowEffectsMesh.cs  NowFont.cs  NowFontCompiler.cs  NowFontFamily.cs  NowFrame.cs  NowGUI.cs  NowGlass.cs  NowGlassBackdropSurface.cs  NowGlassRenderer.cs  NowGlassSettings.cs  NowGradient.cs  NowGraphic.cs  NowHeroUIControlRenderer.cs  NowId.cs  NowInput.cs  NowLayout.cs  NowLayoutContainers.cs  NowLayoutGraphic.cs  NowLine.cs  NowManagedFontBaker.cs  NowManagedFontSession.cs  NowMaterialControlRenderer.cs  NowMesh.cs  NowModelPreview.cs  NowPipelineGraphic.cs  NowPipelineLayoutGraphic.cs  NowProfiler.cs  NowRect.cs  NowRectangle.cs  NowRenderer.cs  NowRipple.cs  NowScopeGuard.cs  (+30 more)
Assets/NowUI/Shaders/: TxtRendererRGBAUGUI.shader  TxtRendererUGUI.shader
Assets/NowUI/Tests/: NowCodeEditorTests.cs  NowControlsAdvancedTests.cs  NowControlsTests.cs  NowCornerRadiusTests.cs  NowDialogTests.cs  NowDockingTests.cs  NowExtensionsPerformanceTests.cs  NowFilePickerTests.cs  NowFontStackTests.cs  NowGradientTests.cs  NowImageRenderingTests.cs  NowInputReplayTests.cs  NowInputTests.cs  NowInspectorTests.cs  NowInteractionRepaintTests.cs  NowKeyBindingFieldTests.cs  NowLayoutTests.cs  NowLottieAssetTests.cs  NowLottieBurstTessellatorTests.cs  NowManagedFontCompilerTests.cs  NowMarkdownTests.cs  NowMarkupTests.cs  NowModelPreviewBackendPerformanceTests.cs  NowModelPreviewTests.cs  NowNewControlsTests.cs  NowNodeGraphTests.cs  NowPerformanceTests.cs  NowPointerArbiterTests.cs  NowPopupUXTests.cs  NowRectTests.cs  NowRendererTests.cs  NowRuntimePerformanceTests.cs  NowScreenTests.cs  NowSdfTests.cs  NowTextAreaTests.cs  NowTextEditTests.cs  NowTextFieldEditingTests.cs  NowTextSelectionTests.cs  NowTextShapingTests.cs  NowTextWrapTests.cs  (+16 more)
Assets/Scenes/: DocsScene.unity  MathGraph.unity  NodeGraph.unity  SampleScene.unity
Docs/: API.md  CodeEditor.md  Controls.md  CustomControls.md  CustomMaterials.md  Docking.md  EditorGUI.md  Effects.md  Features.md  Glass.md  Layout.md  Lines.md  Lottie.md  Markdown.md  Markup.md  Mobile.md  ModelPreviews.md  NodeGraph.md  PerformanceReport-2026-07-13.md  Production.md  README.md  RenderPipelines.md  RichText.md  SDF.md  Shapes.md  StylesAndThemes.md  TransformDesign.md  WorldSpace.md
Native/: build-msdf-webgl.sh  nowui-ft-renames.h  nowui-ftmodule.h
PROJECT/Docs/: Features.md  README.md  StylesAndThemes.md
ProjectSettings/: ProjectSettings.asset
Tools/: Assert-NowUIVisualArtifacts.ps1  NowUI-Harness.ps1
Tools/perf/: compare_perf.py  compile_check.sh  parse_perf_xml.py
UserSettings/: EditorUserSettings.asset
UserSettings/Layouts/: CurrentMaximizeLayout.dwlt  default-6000.dwlt
native/nowui-msdf/: CMakeLists.txt  nowui_msdf.h
(+206 files in other folders)
